src/local/src/tests/snapshots/liquid_cache_local__tests__variants__variant_get.snap
---
source: src/local/src/tests/variants.rs
expression: pretty_format_batches(&batches).unwrap()
---
+---------------------------------------------------------------+
| variant_to_json(variant_get(variants_test.data,Utf8("name"))) |
+---------------------------------------------------------------+
| "Alice"                                                       |
| "Bob"                                                         |
| "Charlie"                                                     |
|                                                               |
|                                                               |
+---------------------------------------------------------------+
