src/local/src/tests/snapshots/liquid_cache_local__tests__variants__variant_get_fails_when_value_field_not_nullable.snap
---
source: src/local/src/tests/variants.rs
expression: pretty_format_batches(&batches).unwrap()
---
+-------+
| name  |
+-------+
| Alice |
| Bob   |
|       |
+-------+
